# the_joy_of_accounting

./: README.md  layout.kdl  mise.toml  prek.toml  pyproject.toml
.helix/: languages.toml
notes/: assets.md  what_is_accounting.md
src/the_joy_of_accounting/: __init__.py
src/the_joy_of_accounting/notes/: assets.py  what_is_accounting.py
src/tool/: wrap_quotes.py
src/tool/interface/: explicit.py  implicit.py
test/tool_test/: wrap_quotes_test.py
test/tool_test/interface_test/: explicit_test.py  implicit_test.py
